Add SEO component

--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -3,7 +3,7 @@
   fname: Reti
   lname: Fier
   profession: Full Stack Developer
-  image: images/icon.svg
+  image: images/icon.png
   location: Yangon, Myanmar
   relocation: true
   company: Wunder Tek
