--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "gatsby-plugin-google-analytics": "^4.9.0",
     "gatsby-plugin-image": "^2.9.1",
     "gatsby-plugin-manifest": "^4.9.1",
-    "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-offline": "^5.10.1",
+    "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-sharp": "^4.9.1",
     "gatsby-plugin-sitemap": "^5.9.0",
     "gatsby-source-filesystem": "^4.9.1",
@@ -39,6 +40,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "@types/react-helmet": "^6.1.5",
     "autoprefixer": "^10.4.4",
     "gatsby-plugin-postcss": "^5.9.0",
     "postcss": "^8.4.12",
