--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -1,34 +1,35 @@
 - profile:
-  initials: RF
-  fname: Reti
-  lname: Fier
-  profession: Full Stack Developer
-  image: images/icon.png
-  location: Yangon, Myanmar
-  relocation: true
-  company: Wunder Tek
-  for_hire: true
-  about: |
-    As a young bloke with immense interest in Information Technology, enrolled in university of Lithan to pursue a career in web/application development industry. Combined with the experience I had and my endless exploration into the heart of technologies, I wanted to learn more and took a gap and utilize it. In that brief period, I was able to successfully launch and develop an entire project . With all the wondering of what’s going to be next, the journey awaits.
-  skills:
-    - React
-    - JavaScript
-    - TypeScript
-    - NodeJS
-    - React Native
-    - Express JS
-    - Redux
-    - Next.js
-    - RESTful APIs
-    - HTML
-    - CSS
-    - MongoDB
-  tools:
-    - React
-    - VSCode
-    - Gatsby
-  budget:
-    currency: $
-    min: 5
-    max: 30
-    default: 10
+    initials: RF
+    fname: Reti
+    lname: Fier
+    profession: Full Stack Developer
+    image: images/icon.png
+    location: Bangkok, Thailand
+    relocation: true
+    company: Deal.ai
+    for_hire: true
+    about: |
+      Passionate full-stack developer with hands-on experience in web and mobile application development. 
+      I took a gap to dive deeper into technology, successfully launching and developing projects that expanded my skills in React, NodeJS, and the full development lifecycle. 
+      With a strong foundation in software engineering and a curiosity for emerging tech, I am eager to take on new challenges and grow in the dynamic world of development.
+    skills:
+      - React
+      - Next.js
+      - TypeScript
+      - Tailwind CSS
+      - GraphQL
+      - Node.js
+      - Express JS
+      - Web3.js
+      - MongoDB
+      - Supabase
+      - RESTful APIs
+      - Solidity
+    tools:
+      - Visual Studio Code
+      - Git
+      - Docker
+      - Figma
+      - Postman
+      - Prisma
+      - Webpack
