--- a/package.json
+++ b/package.json
@@ -16,36 +16,38 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "classnames": "^2.3.1",
-    "gatsby": "^4.9.3",
-    "gatsby-plugin-google-gtag": "^4.10.0",
-    "gatsby-plugin-image": "^2.9.1",
-    "gatsby-plugin-manifest": "^4.9.1",
-    "gatsby-plugin-offline": "^5.10.1",
-    "gatsby-plugin-react-helmet": "^5.10.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sharp": "^4.9.1",
-    "gatsby-plugin-sitemap": "^5.9.0",
-    "gatsby-source-filesystem": "^4.9.1",
-    "gatsby-transformer-sharp": "^4.9.0",
-    "gatsby-transformer-yaml": "^4.9.0",
-    "lottie-web": "^5.9.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "classnames": "^2.5.1",
+    "framer-motion": "^10.16.16",
+    "gatsby": "^5.13.1",
+    "gatsby-plugin-google-gtag": "^5.13.0",
+    "gatsby-plugin-image": "^3.13.0",
+    "gatsby-plugin-manifest": "^5.13.0",
+    "gatsby-plugin-offline": "^6.13.0",
+    "gatsby-plugin-react-helmet": "^6.13.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.13.0",
+    "gatsby-source-filesystem": "^5.13.0",
+    "gatsby-transformer-sharp": "^5.14.0",
+    "gatsby-transformer-yaml": "^5.13.0",
+    "lottie-web": "^5.12.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.3.1",
-    "typed.js": "^2.0.12"
+    "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.5.3",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.2",
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
-    "@types/react-helmet": "^6.1.5",
-    "autoprefixer": "^10.4.4",
-    "gatsby-plugin-postcss": "^5.9.0",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.2"
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@types/react-helmet": "^6.1.11",
+    "autoprefixer": "^10.4.16",
+    "gatsby-plugin-postcss": "^6.13.0",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3"
   }
 }
