--- a/content/project.yaml
+++ b/content/project.yaml
@@ -2,7 +2,7 @@
 - project:
     name: Reti Blog
     logo:
-    url: https://github.com/RetiFier/superbase-blog
+    url: https://blog.retifier.dev
   name: Reti Blog
   date: Dec 2024
   technologies:
