--- a/content/job.yaml
+++ b/content/job.yaml
@@ -89,7 +89,7 @@
     name: Veloce (VEXT Crypto)
     logo: images/veloce.png
     url: https://www.veloce.gg/vext/
-  jobTitle: Freelance Blockchain Developer
+  jobTitle: Freelance Full Stack Developer
   fromDate: Aug 2023
   toDate: Jan 2024
   technologies:
